# billie-walter-resolved

./: .gitignore  .pre-commit-config.yaml  README.md  changes.md  check_table_structure.py  check_verification_details.py  clear_session.py  create_phone_verifications_table.py  db_setup.sql  package-lock.json  package.json  pyproject.toml  quick_check.py  quick_check_verification.py  robots.txt  ruff.toml  run.py  simple_mcp_server.py  tailwind.config.js  ttl_setup.sql
app/: __init__.py  config.py  models.py
app/agent/: __init__.py  agent.py  prompts.py  state.py  tools.py
app/routes/: __init__.py  api.py  auth.py  bland.py  dashboard.py  twilio_phone.py  twilio_sms.py  web.py  websocket.py
app/utilities/: address_validation.py  admin_management.py  chat_model.py  conversational_ai.py  database.py  db_setup.py  instances.py  soap_api.py  soap_client.py  text_to_speech.py  time_utils.py  websocket_audio_interface.py
cursor/rules/: cursor-rules.mdc
static/css/: input.css  output.css  theme.css
templates/: base_dashboard.html  convoai.html  dashboard.html  database.html  index.html  login.html  voice_mode.html
